--- a/DoAn/ComputerStore/Areas/Admin/Views/ProductDetails/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/Admin/Views/ProductDetails/Index.cshtml
@@ -62,7 +62,7 @@
                                             </td>
                                             <td>
 
-                                                <image style="height: 120px" src="~/Sources/@Html.DisplayFor(modelItem => item.Product.Image1)"></image>
+                                                <image style="height: 120px" src="~/assets_user/image/data-image/@Html.DisplayFor(modelItem => item.Product.Image1)"></image>
 
                                             </td>
                                             <td>
@@ -77,8 +77,8 @@
                                                     .Select(d => $"{d.ProductSpecification.SpecificationName}: {d.SpecificationValue}")))
                                             </td>
                                             <td>
-                                                @*@Html.Raw(string.Join("<br>", Enumerable.Range(0, (item.Product.Description.Length + 49) / 50)
-                                                    .Select(i => item.Product.Description.Substring(i * 50, Math.Min(50, item.Product.Description.Length - i * 50)))))*@
+                                                @Html.Raw(string.Join("<br>", Enumerable.Range(0, (item.Product.Description.Length + 49) / 50)
+                                                    .Select(i => item.Product.Description.Substring(i * 50, Math.Min(50, item.Product.Description.Length - i * 50)))))
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Product.Price)
