Modify TestProductDetails View

--- a/DoAn/ComputerStore/Areas/User/Views/TestProductDetails/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/TestProductDetails/Index.cshtml
@@ -34,5 +34,65 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
-</div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">With controls</h5>
+
+                        <!-- Slides with controls -->
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="~/assets_user/NiceAdmin/NiceAdmin/assets/img/slides-1.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="~/assets_user/NiceAdmin/NiceAdmin/assets/img/slides-2.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="~/assets_user/NiceAdmin/NiceAdmin/assets/img/slides-3.jpg" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+
+                        </div><!-- End Slides with controls -->
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-8">
+                <!-- Default Card -->
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Default Card</h5>
+                        Ut in ea error laudantium quas omnis officia. Sit sed praesentium voluptas. Corrupti inventore consequatur nisi necessitatibus modi consequuntur soluta id. Enim autem est esse natus assumenda. Non sunt dignissimos officiis expedita. Consequatur sint repellendus voluptas.
+                        Quidem sit est nulla ullam. Suscipit debitis ullam iusto dolorem animi dolorem numquam. Enim fuga ipsum dolor nulla quia ut.
+                        Rerum dolor voluptatem et deleniti libero totam numquam nobis distinctio. Sit sint aut. Consequatur rerum in.
+                    </div>
+                </div><!-- End Default Card -->
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Vendor JS Files -->
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+@*<script src="assets/vendor/chart.js/chart.umd.js"></script>*@
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/vendor/echarts/echarts.min.js"></script>
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/vendor/quill/quill.js"></script>
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/vendor/simple-datatables/simple-datatables.js"></script>
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/vendor/tinymce/tinymce.min.js"></script>
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/vendor/php-email-form/validate.js"></script>
+
+<!-- Template Main JS File -->
+<script src="~/assets_user/NiceAdmin/NiceAdmin/assets/js/main.js"></script>
