--- a/DoAn/ComputerStore/Areas/User/Views/Shared/_LayoutUser.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Shared/_LayoutUser.cshtml
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="@Url.Content("~/assets_user/font/css/all.css")" />
     <link rel="stylesheet" href="@Url.Content("~/assets_user/css/base.css")" />
 
-    <link rel="stylesheet" href="~/assets_user/css/NHD-css.css" />
+    <link rel="stylesheet" href="~/assets_user/font/css/regular.min.css" />
+
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="~/assets_user/css/NHD-css.css" /><!--NgHuuDuy css file modify-->
 
 </head>
 
