--- a/DoAn/ComputerStore/Areas/User/Views/Home/Index.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Home/Index.cshtml
@@ -20,10 +20,10 @@
                         <div class="products-of-catalog">
                             <div class="product-catalog-container">
                                 <div class="product-of-catalog-content">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    <span>Dưới 10.000.000đ</span>
+                                    <span>Trên 10.000.000đ</span>
+                                    <span>VGA RTX 3060</span>
+                                    <span>VGA RTX 2060S</span>
                                     <span></span>
                                     <span></span>
                                 </div>
@@ -250,8 +250,7 @@
                             </a>
                             <div class="product-about-price">
                                 <div class="product-price">
-                                    <p class="original-price">20,420,000₫</p>
-                                    <p class="new-price">19,490,000₫</p>
+                                    <p class="new-price">@item.P.Price₫</p>
                                 </div>
                                 <div class="product-sale-off">
                                     -5%
@@ -290,8 +289,7 @@
                             </a>
                             <div class="product-about-price">
                                 <div class="product-price">
-                                    <p class="original-price">20,420,000₫</p>
-                                    <p class="new-price">19,490,000₫</p>
+                                    <p class="new-price">@item.P.Price₫</p>
                                 </div>
                                 <div class="product-sale-off">
                                     -5%
@@ -329,8 +327,7 @@
                             </a>
                             <div class="product-about-price">
                                 <div class="product-price">
-                                    <p class="original-price">20,420,000₫</p>
-                                    <p class="new-price">19,490,000₫</p>
+                                    <p class="new-price">@item.P.Price₫<p>
                                 </div>
                                 <div class="product-sale-off">
                                     -5%
